[package]
edition = "2024"
name = "tonbo"
resolver = "2"
version = "0.1.0"

[workspace]
members = [".", "predicate"]


[features]
default = ["tokio"]
tokio = [
    "dep:tokio",
    "fusio-manifest/tokio",
    "fusio/executor-tokio",
    "fusio/fs",
    "fusio/tokio",
    "fusio/tokio-http",
]
# Web/wasm build using Fusio's WebExecutor and wasm-http client stack.
web = [
    "fusio-manifest/web",
    "fusio-parquet/executor-web",
    "fusio/aws",
    "fusio/executor-web",
    "fusio/web-http",
]
# Optional OPFS support layered on the web stack.
web-opfs = ["fusio/opfs", "web"]
# Enable this to compile the optional S3 smoke test in `tests/s3_smoke.rs`.
s3-smoke = []
# Internal helpers for tests only; keep recognized for check-cfg.
test-helpers = []

[dependencies]
anyhow = "1"
arrow-array = "56.2.0"
arrow-buffer = "56.2.0"
arrow-ipc = "56.1.0"
arrow-schema = { version = "56.2.0", features = ["serde"] }
arrow-select = "56.2.0"
crc32c = "0.6"
crossbeam-skiplist = "0.1"
fusio = { version = "0.5.0-a0", default-features = false, features = [
    "aws",
    "dyn",
    "executor",
    "fs",
] }
fusio-manifest = { version = "0.5.0-a0", package = "fusio-manifest", default-features = false, features = [
    "std",
] }
fusio-parquet = { version = "0.5.0-a0", package = "fusio-parquet" }
futures = "0.3"
lockable = "0.2"
once_cell = "1"
parking_lot = "0.12"
parquet = { version = "56.2.0", default-features = false, features = [
    "async",
    "zstd",
] }
pin-project-lite = "0.2"
predicate = { version = "0.1.0", path = "predicate" }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2.0.17"
tokio = { version = "1", default-features = false, features = [
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
], optional = true }
typed-arrow-dyn = { version = "0.0.6", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }


[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3"
tempfile = "3"
typed-arrow = { version = "0.5.1", features = ["ext-hooks"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", default-features = false, features = [
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }

[[test]]
name = "read_smoke"
path = "tests/read_smoke.rs"
required-features = ["test-helpers", "tokio"]

[[test]]
name = "durability_public"
path = "tests/durability_public.rs"
required-features = ["test-helpers", "tokio"]

[[test]]
name = "s3_smoke"
path = "tests/s3_smoke.rs"
required-features = ["tokio"]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Ensure getrandom picks the JS backend via cfg flag when building wasm32-unknown-unknown.
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3"
