[package]
edition = "2024"
name = "tonbo"
resolver = "2"
version = "0.4.0-a0"
description = "Embedded database for serverless and edge runtimes, storing data as Parquet on S3"
license = "Apache-2.0"
repository = "https://github.com/tonbo-io/tonbo"
readme = "README.md"

[workspace]
members = [".", "predicate"]


[features]
default = ["tokio", "typed-arrow"]
tokio = [
    "dep:tokio",
    "fusio-manifest/tokio",
    "fusio/executor-tokio",
    "fusio/fs",
    "fusio/tokio",
    "fusio/tokio-http",
]
typed-arrow = ["dep:typed-arrow"]
# Web/wasm build using Fusio's WebExecutor and wasm-http client stack.
web = [
    "fusio-manifest/web",
    "fusio-parquet/executor-web",
    "fusio/aws",
    "fusio/executor-web",
    "fusio/web-http",
]
# Optional OPFS support layered on the web stack.
web-opfs = ["fusio/opfs", "web"]
# Enable this to compile the optional S3 smoke test in `tests/s3_smoke.rs`.
s3-smoke = []

[dependencies]
anyhow = "1"
arrow-array = "56.2.0"
arrow-buffer = "56.2.0"
arrow-ipc = "56.1.0"
arrow-schema = { version = "56.2.0", features = ["serde"] }
arrow-select = "56.2.0"
crc32c = "0.6"
crossbeam-skiplist = "0.1"
fusio = { version = "0.5.0", default-features = false, features = [
    "aws",
    "dyn",
    "executor",
    "fs",
] }
fusio-manifest = { version = "0.5.0", package = "fusio-manifest", default-features = false, features = [
    "std",
] }
fusio-parquet = { version = "0.5.0", package = "fusio-parquet" }
futures = "0.3"
lockable = "0.2"
once_cell = "1"
parking_lot = "0.12"
parquet = { version = "56.2.0", default-features = false, features = [
    "async",
    "zstd",
] }
pin-project-lite = "0.2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2.0.17"
tracing = { version = "0.1", default-features = false }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
], optional = true }
tonbo-predicate = { version = "0.1.0", path = "predicate" }
typed-arrow = { version = "0.5.1", features = ["ext-hooks"], optional = true }
typed-arrow-dyn = { version = "0.0.6", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Ensure getrandom picks the JS backend via cfg flag when building wasm32-unknown-unknown.
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3"


[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typed-arrow = { version = "0.5.1", features = ["ext-hooks"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", default-features = false, features = [
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"

[[test]]
name = "read_smoke"
path = "tests/read_smoke.rs"
required-features = ["tokio"]

[[test]]
name = "s3_smoke"
path = "tests/s3_smoke.rs"
required-features = ["tokio"]

[[example]]
name = "10a_dynamic_basic"
path = "examples/10_dynamic/10a_dynamic_basic.rs"

[[example]]
name = "10b_dynamic_metadata"
path = "examples/10_dynamic/10b_dynamic_metadata.rs"

[[example]]
name = "10c_dynamic_composite"
path = "examples/10_dynamic/10c_dynamic_composite.rs"

[[example]]
name = "10d_dynamic_transaction"
path = "examples/10_dynamic/10d_dynamic_transaction.rs"
