[package]
name    = "tonbo-cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
async-trait = "0.1"
async-stream = "0.3"

flume = { version = "0.11", features = ["async"] }
fusio = "0.4.0"
futures = "0.3"
futures-util = "0.3"
futures-core = "0.3"
serde = { version = "1.0", features = ["derive"] }
supabase-wrappers = { version = "=0.1.22", default-features = false, features = ["pg15"] }
thiserror = "2.0.3"
tokio = { version = "1", features = ["io-util"], default-features = false }
tonbo = { path = ".." }
ulid = { version = "1", features = ["serde"] }

