[package]
edition = "2024"
name = "tonbo-predicate"
version = "0.1.0"
description = "Predicate evaluation for Tonbo embedded database"
license = "Apache-2.0"
repository = "https://github.com/tonbo-io/tonbo"
readme = "../README.md"

[lib]
path = "src/lib.rs"

[features]
default = []

[dependencies]
roaring = "0.11"
typed-arrow-dyn = { version = "0.0.7", features = ["serde"] }
