[package]
description = "ExtReader for Tonbo."
name = "tonbo_ext_reader"
version = "0.1.0"
edition = "2021"

[features]
foyer = []

[dependencies]
anyhow = "1"
arrow = "53"
bytes = { version = "1.7", features = ["serde"] }
foyer = { version = "0.12" }
futures-core = "0.3"
futures-util = "0.3"
fusio-parquet = { package = "fusio-parquet", version = "0.2.2" }
lru = "0.12"
parking_lot = "0.12"
parquet = { version = "53", features = ["async"] }
thiserror = "1"
ulid = { version = "1", features = ["serde"] }

[dev-dependencies]
fusio = { package = "fusio", version = "0.3.3", features = [
    "aws",
    "dyn",
    "fs",
    "object_store",
    "tokio",
    "tokio-http",
] }
fusio-dispatch = { package = "fusio-dispatch", version = "0.2.2", features = [
    "tokio",
] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
