[package]
description = "Helpers of Tonbo"
documentation = "https://docs.rs/tonbo_macros"
edition.workspace = true
license.workspace = true
name = "tonbo_macros"
repository.workspace = true
version = "0.1.0"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"

[lib]
doctest = false
proc-macro = true
