[package]
name = "tonbo_net_client"
version = "0.1.0"
edition = "2021"

[features]
default = ["transport", "tonbo/tokio"]
transport = ["tonic/transport", "tonic-build/transport"]
wasm = ["dep:tonic-web-wasm-client", "tonbo/wasm"]

[dependencies]
async-stream = "0.3"
fusio = { git = "https://github.com/tonbo-io/fusio.git", rev = "216eb446fb0a0c6e5e85bfac51a6f6ed8e5ed606", package = "fusio", version = "0.3.3", features = [
    "dyn",
    "fs",
] }
futures-core = "0.3"
futures-util = "0.3"
prost = { version = "0.13" }
thiserror = "2"
tonbo = { path = "../", package = "tonbo", default-features = false}
tonic = { version = "0.12", default-features = false, features = [
    "prost",
    "codegen",
] }
tonic-web-wasm-client = {version = "0.6", optional = true}


[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = [
    "prost",
] }

