[package]
edition = "2021"
name = "tonbo-python"
version = "0.2.0"
license = "Apache-2.0"
repository = "https://github.com/tonbo-io/tonbo"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
futures = { version = "0.3" }
pyo3 = { version = "0.25", features = [
    "abi3",
    "abi3-py310",
    "extension-module",
] }
pyo3-async-runtimes = { version = "0.25", features = [
    "attributes",
    "tokio-runtime",
] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tonbo = { version = "0.3.2", path = "../../" }
