[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "tonbo"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]
bench = ["pytest", "pytest-asyncio", "pytest-benchmark", "duckdb"]
docs = ["pdoc"]

[tool.maturin]
features = ["pyo3/extension-module"]

module-name = "tonbo._tonbo"
python-source = "python"
