[package]
name = "tonbo-cloudflare-worker"
version = "0.1.0"
edition = "2024"
publish = false

# Standalone workspace (not part of parent tonbo workspace)
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Tonbo with web (WASM) features
tonbo = { path = "../..", default-features = false, features = ["web"] }

# Fusio for WebExecutor and AmazonS3 types
fusio = { version = "0.5.0", default-features = false, features = [
    "aws",
    "executor-web",
] }

# Arrow for RecordBatch creation
arrow-array = "56.2.0"
arrow-schema = "56.2.0"

# Cloudflare Workers runtime
worker = "0.7"
console_error_panic_hook = "0.1"

# getrandom needs wasm_js feature for WASM
getrandom = { version = "0.3", features = ["wasm_js"] }

# For async streams
futures = "0.3"

# Size optimizations - Cloudflare Workers have a 10MB limit
[profile.release]
opt-level = "z"       # Optimize for size
lto = "fat"           # Full link-time optimization
strip = "symbols"     # Strip debug symbols
codegen-units = 1     # Better optimization (slower compile)
panic = "abort"       # Smaller panic handling
