[package]
name = "bench-report"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "alloc", "serde"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
itertools = "0.12"

[dev-dependencies]
indoc = "2"
tempfile = "3"
