[package]
name = "tonbo-bench-runner"
version = "0.1.0"
edition = "2024"
description = "One-command runner for Tonbo benchmarks"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4.5.4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3"
